--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 .App {
   text-align: center;
+  font-family: 'Josefin Sans', sans-serif !important;
 }
 
 .App-logo {
